Thesis chapters 1 and 4 for John

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -474,3 +474,12 @@
   year={2015},
   publisher={Matrix Editions}
 }
+
+
+
+@book{bulmer1979principles,
+  title={Principles of statistics},
+  author={Bulmer, Michael George},
+  year={1979},
+  publisher={Courier Corporation}
+}
