--- a/Tesis.tex
+++ b/Tesis.tex
@@ -2255,7 +2255,7 @@ the results in the box plots in Figure \ref{figSensitivityPlot}.
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=0.75]{./FigChap4/sensitivityPlot}
+\includegraphics[scale=0.70]{./FigChap4/sensitivityPlot}
 \caption{Boxplots containing the result  for the total effect Sobol index performed on each of the nine sensors.
 The dashed line represents the value of zero.}
 \label{figSensitivityPlot}
@@ -2375,23 +2375,17 @@ experimental measurement errors.
 
 With the emulator at hand, we are now in position to apply
 the Bayesian framework to estimate the values of the parameters and the source emission rate. 
-
-%I ended here
-Recall that in the Bayesian framework, to solve an inverse problem
-is equivalent to find the posterior distribution of the parameters
-of interest. In our case we want to find the posterior
+Our goal is to characterize the posterior distribution for the
+parameters and emission rates, more precisely
+we want to find the posterior
 of the parameters $\pars$ and sources $\q$ given
-the experimental data $\y$. By Bayes' rule the posterior
+the experimental data $\y$. Recall By Bayes' rule in equation $\eqref{eqnBayes}$, the posterior
 distribution is given by
 \begin{equation}\label{eqnBayesChp4}
 \post(p,z_{0},L,\q|\y)=\frac{\like(\y|p,z_{0},L,\q)\prior(p,z_{0},L,\q)}{Z(\y)}.
 \end{equation}
-Given the Gaussian additive noise model in equation (\ref{eqnChp4Additive}), 
-the likelihood can be calculated as
-\begin{equation*}
-\y|\pars,\q\sim\mathcal{N}(\widehat{A}\q,\lambda I).
-\end{equation*}
-or explicitly
+Given the Gaussian additive noise model in equation (\ref{eqnChp4Additive}),  a straightforward calculation yields
+the likelihood 
 \begin{equation}\label{eqnFinalLike}
 \like(\y|\pars,\q)=\frac{1}{(2\pi\lambda^{2})^{\frac{9}{2}}}\exp\left(-\frac{1}{2\lambda^{2}}\|\widehat{A}q-\y\|^{2}\right).
 \end{equation}
@@ -2403,55 +2397,43 @@ The constant of proportionality is given by
 \begin{equation}\label{eqnPropConst}
 Z(\y)=\int\like(\y|p,z_{0},L,\q)\prior(p,z_{0},L,\q)dpdz_{0}dLd\q.
 \end{equation}
-To find it, is necessary to choose a prior distribution. We now
-turn our attention into choosing a prior that captures the better the information
-we have about the problem.
+We now discuss the choice of the prior distribution
 
 
 
 \subsection{Choosing a Prior}
-The values of the  parameters $p,z_{0}.L$ depend on the environmental conditions of the region
-where the lead-zinc smelter is, whereas
-the values of the sources $q_{1},q_{2},q_{3},q_{4}$ do not. Thus, it is reasonable
-to assume that the possible values between these two sets of variables are independent
-of each other. This can be captured by the assumption
+The values of the  parameters $p,z_{0}.L$ depend on the environmental and meteorological conditions of the region, whereas
+the values of the emission rates $q_{1},\ldots,q_{4}$ do not. Thus, it is reasonable
+to assume that these  variables are independent
+of each other. This independence can be captured  as
 \begin{equation*} 
 \prior(\pars,\q)=\prior(\pars)\prior(\q).
 \end{equation*}
 By writing the prior distribution as the product of two distributions, we 
 simplify the problem by working with two different subsets of variables.
-Let us first work with the prior for the parameters $p,z_{0}.L$. In \cite{seinfeld1998atmospheric}
-it is propose a function relation of the form
-\begin{equation*}
-L=a+b\ln(z_{0}),
-\end{equation*}
-where $a$ and $b$ are constants. This relation is empiric and its validity is yet to be
-confirmed. Instead we assume that $z_{0}$ and $L$ are independent. Finally
- there is no known connection between the parameter $p$ and the other two
-parameters. Thus we assume all three parameters are independent of each other.
-This assumption is  modeled by 
+Let us first introduce the prior for the parameters $p,z_{0}.L$. 
+We assume all three parameters are independent of each other, thus
 \begin{equation*}
 \prior(p,z_{0},L)=\prior(p)\prior(z_{0})\prior(L).
 \end{equation*}
 As mentioned in Chapter 1, there is no strong reason to pick a value over the other 
-for these parameters.
-Since there is no preference, we assume an uniform
+for these parameters unless sufficient meteorological details are available.
+To this end, we assume a uniform
 distribution for each parameter. The allowed range for each parameter is given
 in Table (\ref{tabRanges}). Explicitly we have the  distribution
 density for each parameter as
 \begin{eqnarray}\label{eqnPriorparam}
-\prior(p)=\frac{1}{0.3}\textbf{1}_{[0.1,0.4]}\nonumber\\
+\prior(p)=\frac{1}{0.3}\textbf{1}_{[0.1,0.4]}\nonumber,\\
 \prior(z_{0})=\frac{1}{2-10^{-3}}\textbf{1}_{[10^{-3},2]},\\
 \prior(L)=\frac{1}{499}\textbf{1}_{[-500,-1]}\nonumber.
 \end{eqnarray}
-Choosing the prior for the sources $q_{1},q_{2},q_{3},q_{4}$ requires more
+Choosing the prior for the sources $q_{1},\ldots,q_{4}$ requires more
 analysis since we are not completely ignorant about their possible values. 
-Let us summarize our knowledge about these variables.
+Let us summarize our prior knowledge of these variables.
 \begin{enumerate}
 \item Each source is unrelated to the other three.
-\item $q_{i}>0$ and $q_{i}<\infty$ for $i=1,2,3,4$.
-\item According to the engineers working at the smelter, the estimated
-output for the sources are
+\item the $q_{i}$ are positive and finite.
+\item Engineering estimates of emission rates are as follows (These values are taken as a guideline).
 \begin{table}[H]
 \centering
 \begin{tabular}{|c|c|}
@@ -2468,38 +2450,37 @@ $q_{3}$ & 5\tabularnewline
 $q_{4}$ & 5\tabularnewline
 \hline 
 \end{tabular}
-\caption{Estimated parameters for the four sources.}
+\caption{Engineering estimates of the emission rates.}
 \label{tabSources}
 \end{table}
-\item The engineers estimates are reliable.
 \end{enumerate}
-Mathematically the first condition can be written as
+Mathematically, (1) above can be modelled with an independent  prior:
 \begin{equation*}
 \prior(q_{1},q_{2},q_{3},q_{4})=\prior(q_{1})\prior(q_{2})\prior(q_{3})\prior(q_{4}).
 \end{equation*}
 The second condition requires that the probability density for each source has to 
-be supported in the set $[0,\infty)$. The third and fourth conditions can be interpreted
+be supported in the set $[0,\infty)$. The third  condition can be interpreted
 as follows: the mode of the prior  for each sources has to be at the
-engineers estimated value and $99\%$ of the mass should be contained between 0 and 3
-times that value. A probability distribution that 
-satisfies the above conditions is the gamma distribution. The gamma distribution
-is a parametric distribution. It will be 
-denoted by $\mathscr{G}(\alpha,\beta)$. The Lebesgue density
-for the gamma distribution is given by
+engineering estimates, and $99\%$ of the mass should be contained between 0 and 3
+times that value. The reason for this is to give credibility to 
+engineering estimates but not too much credit. We choose to work with the gamma distribution which is A probability distribution that 
+satisfies the above conditions. We denote the probability measure of a gamma random variable by 
+$\mathscr{G}(\alpha,\beta)$. The Lebesgue density
+of the gamma distribution is given by
 \begin{equation*}
-f(x|\alpha,\beta)=\frac{\beta^{\alpha}}{\Gamma(\alpha)}x^{\alpha-1}e^{-\beta x}\textbf{1}_{[0,\infty)},
+g(x;\alpha,\beta)=\frac{\beta^{\alpha}}{\Gamma(\alpha)}x^{\alpha-1}e^{-\beta x}\textbf{1}_{[0,\infty)},
 \end{equation*}
 where $\alpha$ and $\beta$ are constants. We are going to assume that each source has 
-a  gamma distribution. In this case we write
+a  gamma distribution i.e.,
 \begin{equation*}
 q_{i}\sim \mathscr{G}(\alpha_{i},\beta_{i})\text{ for }{i=1,2,3,4},
 \end{equation*}
-or equivalently
-\begin{equation}\label{eqnPriorq}
-\prior(q_{i})=\frac{\beta_{i}^{\alpha_{i}}}{\Gamma(\alpha_{i})}q_{i}^{\alpha_{i}-1}e^{-\beta_{i} q_{i}}\textbf{1}_{[0,\infty)}.
-\end{equation}
+%or equivalently
+%\begin{equation}\label{eqnPriorq}
+%\prior(q_{i})=\frac{\beta_{i}^{\alpha_{i}}}{\Gamma(\alpha_{i})}q_{i}^{\alpha_{i}-1}e^{-\beta_{i} q_{i}}\textbf{1}_{[0,\infty)}.
+%\end{equation}
 We choose the values of $\alpha_{i}$ and $\beta_{i}$  in terms of
-the engineer estimate $q_{eng,i}$ for the $i$-th source.
+the engineering estimate $q_{eng,i}$ for the $i$-th source.
 More precisely we choose the values of $\alpha_{i}$ and $\beta_{i}$ 
 as the solution of the 
 following system of equations
@@ -2507,26 +2488,28 @@ following system of equations
 \frac{\alpha_{i}-1}{\beta_{i}}=q_{eng,i}, \\
 qgamma(0.99,\alpha_{i},\beta_{i})=3q_{eng,i}.
 \end{eqnarray*}
-Here $qgamma$ is the quantile function for the gamma distribution. By choosing the values
+Here $qgamma$ is the quantile function for the gamma distribution. The quantile function
+is the inverse of the cumulative distribution function.
+By choosing the values
 of the parameters for the gamma distribution in this manner, we satisfy
 \begin{equation*}
-\max_{q\in [0,\infty)}f(q|\alpha_{i},\beta_{i})=q_{eng,i}\qquad\text{for }i=1,2,3,4.
+\max_{q\in [0,\infty)}g(q;\alpha_{i},\beta_{i})=q_{eng,i}\qquad\text{for }i=1,2,3,4.
 \end{equation*}
 and $99\%$ of the mass of the density is concentrated between 0 and 3 times the
-engineers estimate. 
+engineers estimate \cite{dudley2002real}. 
 Combining the results from equations (\ref{eqnPriorparam}) and (\ref{eqnPriorq})
-we conclude that the prior distribution  satisfies
+we conclude that the prior distribution  for the emission rates has the form
 \begin{equation}\label{eqnPriorFinal}
-\prior(p,z_{0},L,\q)\propto \textbf{1}_{[0.1,0.4]}\textbf{1}_{[10^{-3},2]}\textbf{1}_{[-500,-1]}\prod_{i=1}^{4}q_{i}^{\alpha_{i}-1}e^{-\beta_{i} q_{i}}\textbf{1}_{[0,\infty)}.
+\prior(p,z_{0},L,\q)\propto \textbf{1}_{[0.1,0.4]}(p)\textbf{1}_{[10^{-3},2]}(z_{0})\textbf{1}_{[-500,-1]}(L)\prod_{i=1}^{4}q_{i}^{\alpha_{i}-1}e^{-\beta_{i} q_{i}}\textbf{1}_{[0,\infty)}(q_{i}).
 \end{equation}
-With the prior and the likelihood, we finally obtain the expression for the posterior by combining equations (\ref{eqnFinalLike}),(\ref{eqnPropConst}) and (\ref{eqnPriorFinal})
-into Bayes' rule in equation (\ref{eqnBayesChp4}). Explicitly,  the posterior $\post(\pars,\q|\y)$ is proportional to
+With the prior and the likelihood, we can finally obtain an expression for the posterior by substituting  equations (\ref{eqnFinalLike}),(\ref{eqnPropConst}) and (\ref{eqnPriorFinal})
+into Bayes' rule (\ref{eqnBayesChp4}). The posterior $\post(\pars,\q|\y)$ is proportional to the Lebesgue density of
 \begin{equation*}
-\exp\left(-\frac{1}{2\lambda^{2}}\|\widehat{A}\q-\y\|^{2}-\sum_{i=1}^{4}\beta_{i}q_{i}\right)\prod_{j=1}^{4}q_{i}^{\alpha_{i}-1}\textbf{1}_{[0.1,0.4]\times[10^{-3},2]\times[-500,-1]}.
+\exp\left(-\frac{1}{2\lambda^{2}}\|\widehat{A}\q-\y\|^{2}-\sum_{i=1}^{4}\beta_{i}q_{i}\right)\prod_{j=1}^{4}q_{i}^{\alpha_{i}-1}\textbf{1}_{[0.1,0.4]\times[10^{-3},2]\times[-500,-1]}(p,z_{0},L).
 \end{equation*}
 
 
-The indicator function represents the ranges of the allowed  values of the parameters in Table (\ref{tabRanges}). 
+To make notation simpler we have chosen to represent the vector $[q_{1},\ldots,q_{4}]^{T}$ as $\q$ or as component-wise in the summation. The indicator function represents the ranges of the allowed  values of the parameters in Table (\ref{tabRanges}). 
 These values are widely accepted in the literature, however there is not
 a technically sounded reason of why these ranges are acceptable.  We will expand the possible values for  these parameters
 in order to test the validity of the values in Table (\ref{tabRanges}). The new set of ranges we picked are shown
@@ -2547,7 +2530,7 @@ Roughness length (m) & $z_{0}$ & ${[}0 ,3{]}$\tabularnewline
 Monin-Obukhov length (m) & $L$ & ${[}-600,0{]}$\tabularnewline
 \hline 
 \end{tabular}
-\caption{Parameters under study and their new allowed ranges.}
+\caption{Model Parameters under study and their new allowed ranges.}
 \label{tabNewRanges}
 \end{table}
 Using these new ranges for the parameters the posterior $\post(\pars,\q|\y)$ is now proportional to
@@ -2564,37 +2547,37 @@ Finding these estimates is the topic of the next section.
 
 \section{Inferring the Parameters and the sources}
 
-To find  point estimates such as those  in equation (\ref{eqnpointestimates}) and its uncertainty associated,  is necessary to perform  high
-dimensional integrals that are not analytically tractable. Thus, we resort to use numerical integration techniques. In 
-particular   we will use use 
-the Metropolis-Hastings(MH) algorithm (see Chapter 3, Algorithm 1) to sample from the posterior and then
-use Monte Carlo integration to obtain the quantities of interest. In order to use MH, the posterior
-in equation (\ref{eqnPosteriorFinal}) has to be fully specified. Up to this point we have not
+Recall that  there are different 
+types of point estimates, such as Maximum a posterior
+or posteri or conditional mean (see equation $\eqref{eqnpointestimates}$). To find any of these estimates   and its uncertainty associated,  is necessary to perform  high
+dimensional integrals that are not analytically tractable. Thus, we resort to  numerical integration techniques. In 
+particular   we use
+the Metropolis-Hastings(MH) algorithm (see Chapter 3, Algorithm 1) to sample  the posterior measure and 
+use Monte Carlo integration to approximate the quantities of interest. In order to use MH, the posterior
+in equation (\ref{eqnPosteriorFinal}) has to be fully specified up to a normalizing constant. Up to this point we have not
 set the value of $\lambda$ in the likelihood distribution in equation (\ref{eqnFinalLike}).
 \\ 
-Fixing a value for $\lambda$ is relevant for the model. To understand why this is so, consider
-the cases when $\lambda$ is very small or $\lambda$ is very large. In the former case the exponential  term 
-\begin{equation*}
+To understand why $\lambda$ is important, consider
+the cases when $\lambda$ is very small or  very large. In the former case the exponential  term 
+\begin{equation}\label{eqnExponentialTest}
 \exp\left(-\frac{1}{2\lambda^{2}}\|\widehat{A}\q-\y\|^{2}\right),
-\end{equation*}
-in the likelihood becomes negligible unless $\|\widehat{A}\q-\y\|$ is of the order of $\lambda$. The interpretation
-is that we are giving all the credibility to the model and the data. In this case,
+\end{equation}
+in the likelihood becomes negligible unless $\|\widehat{A}\q-\y\|$ is of the same order as $\lambda$. The interpretation
+is that measurements are so accurate that we are giving all credibility to the model and the data. In this situation the prior
+has little effect other than imposing certain constraints, and
 the posterior behaves like the likelihood.
-When $\lambda$ is large the exponential flattens out. In this scenario
-the likelihood is not giving any weight to different combination of the parameters $\pars$ and $\q$,
-thus we are giving all the credibility to the prior distribution.
-In this case the posterior behaves like the prior. Thus, it is necessary to pick a value of 
-$\lambda$ that weights the importance of the likelihood in the right way. By the ``right" way
-we mean, a value of $\lambda$ that weights the data, the atmospheric model simulation output and
-the prior information equally. To achieve this we propose the value of $\lambda$ that
+When $\lambda$ is large the exponential in equation $\eqref{eqnExponentialTest}$ flattens out, and 
+the likelihood has less influence over the posterior,
+thus  the prior distribution is more credible.
+In this case the posterior behaves similarly to the prior. Thus, it is necessary to pick a value of 
+$\lambda$ that weights the importance of the likelihood correctly. That is,
+a value of $\lambda$ that weights the data, the atmospheric model simulation output and
+the prior information appropriately according to the quality of the data. To achieve this we choose the value of $\lambda$ that
  minimizes the functional
-\begin{equation*}
-J(\lambda)=\frac{1}{2}\E_{\post^{\lambda}}\left[\|\widehat{A}(p,L,z_{0})\q-\y\|_{2}+\|\q-\q_{est}\|_{2}\right],
-\end{equation*}
-where $\q_{est}=[35,80,5,5]^{T}\frac{Ton}{yr}$. Explicitly,
 \begin{equation}\label{eqnFunctional2Optimize}
 J(\lambda)=\frac{1}{2}\int\left(\|\widehat{A}(p,L,z_{0})\q-\y)\|_{2}+\|\q-\q_{est}\|_{2}\right)d\post^{\lambda}.
 \end{equation}
+where $\q_{est}=[35,80,5,5]^{T}\frac{Ton}{yr}$. 
 We use the notation $\post^{\lambda}$ to explicitly show the dependence of the posterior measure $\post$ with the parameter $\lambda$.  The motivation
 to define $J$ as above is the following: consider
 the expression
@@ -2604,7 +2587,7 @@ the expression
 In this case, depending on the value of $\delta$, we are giving different weights to the atmospheric 
 disperssion model credibility,
 and the prior information about $\q$. There is no reason to believe the atmospheric model is completely
-accurate so the engineers estimates about the sources can be dismissed. Hence, by choosing $\delta=\frac{1}{2}$
+accurate so the engineering emission estimates  can be dismissed. Hence, by choosing $\delta=\frac{1}{2}$
 we weight both terms equally. Also we want to make the term (\ref{eqnPreFunctional}) as small
 as possible, regardless of the value of $\pars$ and $\q$, and using the information
 contained in the experimental data $\y$. Taking the expectation of \eqref{eqnPreFunctional}
@@ -2617,48 +2600,45 @@ accomplishes that.
 \label{figLambdaEmul}
 \end{figure}
 
-Estimating $J(\lambda)$ accurately is expensive, since  it is necessary to evaluate a seven-dimensional
-integral. Thus, to approximate a minimizer for $\lambda$  we will use an emulator for $J$ using Gaussian processes. 
+Estimating $J(\lambda)$ exactly is expensive, since  it involves evaluating a seven-dimensional
+integral. Thus, to approximate a minimizer for $\lambda$  we will approximate $J$ using Gaussian processes emulator. 
 To create the training set, we evaluate
 $J$ for six different values of $\lambda$ using Markov Chain Monte Carlo integration.
 The results of the emulation are shown in Figure \ref{figLambdaEmul}. The minimum for 
-$J(\lambda)$ is attain approximately at $\lambda=2.80008\times 10^{-5}$. This
-is the value we are going to pick for $\lambda$ to sample from the
-posterior distribution in equation \eqref{eqnPosteriorFinal} and use the samples
-to obtain point estimates for $\pars$ and $\q$. We mention that if more
-accuracy is need in finding the minimizer it is possible to use Gaussian processes
-for optimization, we refer the reader to \cite{osborne2009gaussian} for details in this topic.
+$J(\lambda)$ is attained approximately at $\lambda=2.80008\times 10^{-5}$, which is
+ the value we pick for $\lambda$ in the reminder of this chapter. We note that if more
+accuracy is needed in finding the minimizer it is possible to use Gaussian processes to perform
+accurate  optimization, we refer the reader to \cite{osborne2009gaussian} for details in this topic.
 
 
 For the MH implementation we adapt Algorithm 1 in Chapter 3, in a way
 that the sampling of $u$ (line 3 in the Algorithm) is done adaptively as proposed in \cite{roberts2009examples}.
-Using the adaptative algorithm we obtained two million samples and  as a burn in period we discarded the first million  samples. 
+Using the adaptative algorithm we obtained two million samples and  as a burn in period we discarded the first one million  samples. 
 Since the acceptance rate was relatively low, around $10\%$, we thined the last million samples
 by picking a sample every hundred samples. In this way we end up with $10.000$ samples that are
-weakly correlated.
+weakly correlated in the sense that the autocorrelation function is close to zero.
 \\
 Using MH to sample
-from highly dimensional supported probability distributions is challenging. Specially assessing precisely
-when the Markov chain has converged and if the samples obtained after the convergence are indeed from
-the probability distribution of interest. To overcome these difficulties, several heuristics on convergence
+from high-dimensional probability distributions is challenging. Specially assessing the convergence of the Markov chain
+to the target distribution.
+ To overcome these difficulties, several heuristics on convergence
 criteria have been develop, such as, graphical methods and non-parametric tests of stationarity. The reader
 interested in this topic is referred to \cite{casella2008monte} and the references within. 
-In this work we are going to use the traces of the Markov chain to assess the convergence of it. 
+In this work we use the traces of the Markov chain to assess its convergence. 
 A \textit{trace plot} is a graphic display of the motion of the Markov chain in each
-of the dimensions in the support of the probability density we are sampling. 
-Recall that the probability density we are interested, is the  posterior in equation (\ref{eqnPosteriorFinal}). 
-This posterior is supported in a  subset of $\mathbb{R}^{7}$, thus to obtain the trace plots
-of it, we need to plot the motion of the Markov chain in each of the seven dimensions. These plots
-are shown in Figure \ref{figTraces}. 
+of the dimensions in the support of the target probability density. 
+Recall that the probability density we are interested in, is the  posterior in equation (\ref{eqnPosteriorFinal}). 
+This posterior is supported in a  subset of $\mathbb{R}^{7}$. To obtain the trace plots,
+we  plot the motion of the Markov chain separately in each of the seven dimensions (see Figure \ref{figTraces}). 
 \\
 The trace plots in Figure \ref{figTraces} show that the Markov chain is moving around the whole 
 support of the posterior density. Another observation is that different regions in the support
 of $\post(\pars,\q|\y)$ are visited by the chain every so often. This means
 that the chain is not getting stuck in a local mode of the distribution and is mixing properly. In conclusion the 
-trace plots have the behaviour One would expect of a Markov chain that has converged
-and whose realizations are taken from the probability density that is being sampled. 
+trace plots have the behaviour one would expect of a Markov chain that has converged
+and whose realizations are taken from the  target probability density. 
 
-One of the advantages of using the Metropolis-Hastings algorithm is that the samples
+One of the advantages of every sampling algorithm is that the samples
 obtained in each dimension are distributed as the marginal distribution
 for that variable. If $X$ and $Y$ are random variables jointly distributed 
 as $\p(X,Y)$, then,
@@ -2671,20 +2651,12 @@ For example the marginal distribution for the parameter $p$ is given by
 \p(p|\y)=\int\post(\pars,\q|\y)dz_{0}dLd\q.
 \end{equation*}
 
-\begin{figure}[H]
-\centering
-\includegraphics[scale=0.7]{./FigChap4/traces}
-\caption{Trace plots for each of the  variables $\pars$ and $\q$.}
-\label{figTraces}
-\end{figure}
-
-The marginal distribution of a random variable contains all the information about
-that variable regardless of the value of other parameters. We are going
+We are going
 to use the marginals for each of the variables in the posterior distribution
 in equation (\ref{eqnPosteriorFinal}) to obtain useful statistics about the 
 parameters.
-The histograms
-for the   marginals  of each of the variables of interest in the posterior are shown
+The  posterior histograms
+for the   marginals  of each of the variables of interest  are shown
 in Figure \ref{figHistograms}. 
 
 
@@ -2693,58 +2665,54 @@ in Figure \ref{figHistograms}.
 
 
 
-The next step for estimating the parameters is to decide what of the point estimates from equation (\ref{eqnpointestimates})
+
+
+
+In Figure \ref{figHistograms} we show the values of the point
+estimates for each distribution and the fitting curves for the parametes $\pars$
+and the sources $q_{1}$ to $q_{4}$. We now explain how we chose the point
+estimates and the uncertainty associated.
+
+The next step for estimating the parameters is to decide which of the point estimates from equation (\ref{eqnpointestimates})
 we will choose. By looking at Figure \ref{figHistograms},
 it is clear that the  marginal posterior for the four sources is skewed and with a well-defined mode.
 Thus, finding this mode is a reasonable choice for a point estimate. To approximate the 
 value of the mode in the marginal of the sources, we are going to take
 advantage of the fact that the histograms for the marginals have a similar
-shape of a gamma distribution and we are going to fit over them
-the gamma distribution that is closest to the histograms shape. We
-take the point estimate to be the mode of the fit.
-%To find the  marginal maximum a posteriori estimate for  each of the four sources, it is
-%necessary to find
-%\begin{equation*}
-%\max_{q_{j}\in [0,\infty)}f(q_{j})\qquad\text{for } j=1,2,3,4,
-%\end{equation*}
-%where
-%\begin{equation*}
-%f(q_{j})=q_{j}^{\alpha_{j}-1}\exp(-\beta q_{j})\int \prod_{k\neq j}q_{k}^{\alpha_{k}-1}\exp(-\beta_{k}q_{k})
-%\exp\left(-\frac{1}{2\lambda^{2}}\|\widehat{A}\q-\y\|^{2}\right)dpdz_{0}dLd\tilde{\q}_{j},
-%\end{equation*}
-%where $d\tilde{\q}_{j}$ means the $j$-th term in the volume element $\prod_{k=1}^{4}dq_{k}$ has been suppressed.
-%Optimizing numerically $f$ is a challenging problem. 
-%First, the integral involved is high dimensional,
-%hence is necessary to use Monte Carlo integration to estimate it.  
-%The exponent in the integrand is a number close to zero
-%unless the term $\|\widehat{A}\q-\y\|^{2}=\mathcal{O}(10^{-12})$. 
-%Since Monte Carlo integration requires to evaluate the integrand
-%at a large and random number of different points in the domain of integration, we are going
-%to end up adding numbers that are, in general, smaller than the machine epsilon. 
-%Hence, numerically
-%the integrand will behave like a very small constant. The problem with this is that
-%all the information from the experimental data is contained in the integrand. So,
-%if the integrand behaves like a constant due to rounding error, the optimization
-%routine will not return an accurate value. Instead of using an optimization scheme, 
-%we will use the fact that the marginal 
-%posterior for the sources behaves similarly to a gamma distribution. In this case, we 
-%fit the gamma distribution that is closer to the marginal posterior and report
-%the statistics associated to that distribution. 
-%\\
-\\
+shape to a gamma distribution and we are going to a
+ gamma distribution  to the histograms and
+take the point estimate to be the mode of the fitted distribution.
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.75]{./FigChap4/traces}
+\caption{Trace plots of the Markov chain for each of the  variables $\pars$ and $\q$. Using
+the Metropolis-Hastings algorithm of Algorithm 1 in Chapter 3.}
+\label{figTraces}
+\end{figure}
+
+
 For the parameters $\pars$ the situation is more subtle. For the parameter $p$
-the distribution has no distinctive points. For  $z_{0}$ and $L$
+the distribution has no distinctive points. This means the data has little information
+regarding the values of $p$. For  $z_{0}$ and $L$
 there are values that are more distinctive than others, but is not a very sharp
-distinction. To pick a point estimates
-for $\pars$ we fit a density over the histograms using the R built-in 
+distinction. To pick a point estimate
+for $\pars$ we fit a density over the histograms using the R-built-in 
 function $density$ and then we pick the mode of each histogram to be 
 the chosen point estimate.
 
+Next we consider the uncertainty estimates for our parameters. We consider  the $68\%$ Bayesian confidence interval
+for each of the parameters. Given a point estimate $x^{*}$  for a random variable $X$ distributed with
+ probability density $\rho$, a $68\%$ Bayesian confidence interval of that estimate, 
+is defined as the ball of radius $r$ centered at $x^{*}$ such that
+\begin{equation*}
+\int_{B(x^{*},r)}\rho(x)dx=0.68.
+\end{equation*} 
 
+The reason to choose this uncertainty measure, is to replicate the classical ``mean plus standard deviation''
+measurement of confidence when dealing with Gaussian  probability distributions \cite{bulmer1979principles}.
 
-In Figure \ref{figHistograms} it is shown the values of the point
-estimates for each distribution and the fitting curves for the parametes $\pars$
-and the sources $q_{1}$ to $q_{4}$.
+The estimates for the parameters and the uncertainties are shown in Table \ref{tabFinalEstimates}.
 
 \begin{figure}[H]
 \centering
@@ -2756,20 +2724,25 @@ and the sources $q_{1}$ to $q_{4}$.
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.45]{./FigChap4/histogramsII}
-\caption{Histograms for the marginal distribution for each of the seven variables
-in the support of the posterior density in equation (\ref{eqnPosteriorFinal}).}
+\caption{Histograms for the marginal posterior distribution for each of the seven unknowns in our model}
 \label{figHistograms}
 \end{figure}
 
-For the uncertainty estimate, we pick the $68\%$ Bayesian confidence interval
-for each of the parameters. Given a point estimate $x^{*}$  for a random variable $X$ distributed with
- probability density $\rho$, a $68\%$ Bayesian confidence interval of that estimate, 
-is defined as the ball of radius $r$ centered at $x^{*}$ such that
-\begin{equation*}
-\int_{B(x^{*},r)}\rho(x)dx=0.68.
-\end{equation*} 
-
-The estimates for the parameters and the uncertainties are shown in Table \ref{tabFinalEstimates}.
+The spread of the $68\%$ confidence interval for the distribution
+of the parameters show that the experimental data is not large enough
+so  the posterior marginal distribution for the parameters is 
+not decisively informative about  particular 
+values of the parameters. Despite this, 
+as we can see in the histograms in Figure \ref{figHistograms}, for
+$L$ and $z_{0}$  that there are region in the support
+that are more likely than others. Even though we have
+no prior information about the values of the parameters and only 
+$9$ measurements of zinc deposition, our approach is able
+to distinguish certain regions with high probability. For the value of $z_{0}$
+the region around the mode agrees with the typical values
+for this parameter in the literature, but for $L$, the high
+probability values does not agree with the typical
+values chosen for this parameter \cite{hosseini2016airborne, seinfeld1998atmospheric}.
 
 \begin{table}[H]
 \centering
@@ -2785,27 +2758,11 @@ $z_{0}$ & 0.0811 & $[0,1.5781]$\tabularnewline
 $L$  & -379.45 & $[-195,86,-563.04]$\tabularnewline
 \hline 
 \end{tabular}
-\caption{Parameters and their estimates and uncertainties}
+\caption{Parameters along with their  point estimates and $68\%$ confidence interval.}
 \label{tabFinalEstimates}
 \end{table}
 
-The spread of the $68\%$ confidence interval for the distribution
-of the parameters show that the experimental data is not large enough
-so that the posterior marginal distribution for the parameters is 
-not decisively informative about a value or a particular set 
-of values the parameters are likely to be. Despite this, 
-as we can see in the histograms in Figure \ref{figHistograms}, for
-$L$ and $z_{0}$ we can see that there are region in the support
-that are more likely than others. Even though we have
-no prior information about the values of the parameters and only 
-$9$ measurements of zinc deposition, our approach is able
-to distinguish regions with high probability from
-regions with low probability. For the value of $z_{0}$
-the region around the mode agrees with the typical values
-for this parameter in the literature, but for $L$, the high
-probability values does not agree with the typical
-values chosen for this parameter \cite{hosseini2016airborne, seinfeld1998atmospheric}.
-\\
+
 For the estimates of the sources the situation
 is different due to the prior knowledge we have
 about them. The estimates and uncertainties are shown in 
@@ -2829,10 +2786,10 @@ we obtained  agree with \cite{lushi2010inverse} but in \cite{hosseini2016airborn
 $2$ is severally underestimated. 
 
 
-In conclusion, we have developed a framework that allows us to  do a source inversion and obtain estimates
-of unknown parameters, with the difference that we can quantify the uncertainty in those estimates, as opposed
-to classical approaches to source inversion. \textbf{What to do in the future?}.
-
+The results obtained in Figure \ref{figQUnicertainty}, agree with the results obtained in \cite{lushi2010inverse} in 
+the sense that sources $1$ and $2$ are overestimated by the engineers and sources $3$ and $4$ are underestimated. 
+These results partially disagree with the results in \cite{hosseini2016airborne}, in this reference, source $2$
+is underestimated. In the other three sources our results agree.
 
 
 
