--- a/Tesis.bib
+++ b/Tesis.bib
@@ -1,23 +1,23 @@
 %Book on statistical inverse problems
 @book{Somersalo,
-	title="Statistical and computational inverse problems",
-	author="Somersalo and Kaipio",
+	title="Statistical and Computational Inverse Problems",
+	author="E. Somersalo and J. Kaipio",
 	year="2005",
 	publisher="Springer-Verlag"
 }
 
 %Book by Jayines in Bayesian Statistics
 @book{jaynes2003probability,
-  title="Probability theory: The logic of science",
+  title="Probability Theory: The Logic of Science",
   author="Jaynes, Edwin T",
   year="2003",
-  publisher="Cambridge university press"
+  publisher="Cambridge University Press"
 }
 
 %Article by O'hagan that talks about emulators
 @article{o2006bayesian,
-  title="Bayesian analysis of computer code outputs: a tutorial",
-  author="O’Hagan, Anthony",
+  title="Bayesian Analysis of Computer Code Outputs: a Tutorial",
+  author="O`Hagan, Anthony",
   journal="Reliability Engineering \& System Safety",
   volume="91",
   number="10",
@@ -28,8 +28,8 @@
 
 %Article by Kennedy that complements what O'hagan said
 @article{kennedy2001bayesian,
-  title="Bayesian calibration of computer models",
-  author="Kennedy, Marc C and O'Hagan, Anthony",
+  title="Bayesian Calibration of Computer Models",
+  author="Kennedy, Marc C. and O'Hagan, Anthony",
   journal="Journal of the Royal Statistical Society: Series B (Statistical Methodology)",
   volume="63",
   number="3",
@@ -40,26 +40,26 @@
 
 %The book of sensitivity analysis that talks about Sobol indices
 @book{saltelli2000sensitivity,
-  title="Sensitivity analysis",
-  author="Saltelli, Andrea and Chan, Karen and Scott, E Marian and others",
+  title="Sensitivity Analysis",
+  author="Saltelli, Andrea and Chan, Karen and Scott, E. Marian and others",
   volume="1",
   year="2000",
   publisher="Wiley New York"
 }
 
 %Book on gaussian processes in machine  learning
-@article{rasmussen2006gaussian,
-  title={Gaussian processes for machine learning},
-  author={Rasmussen, Carl Edward},
-  year={2006},
-  publisher={Citeseer}
+@book{rasmussen2006gaussian,
+  title="Gaussian Processes for Machine Learning",
+  author="Rasmussen, Carl Edward",
+  year="2006",
+  publisher="The MIT Press"
 }
 
 %Article that talks about computer experiments with emphasis in space filling design
 
 @article{pronzato2012design,
-  title={Design of computer experiments: space filling and beyond},
-  author={Pronzato, Luc and M{\"u}ller, Werner G},
+  title={Design of Computer Experiments: Space Filling and Beyond},
+  author={Pronzato, Luc and M{\"u}ller, Werner G.},
   journal={Statistics and Computing},
   volume={22},
   number={3},
@@ -72,9 +72,9 @@
 %Space filling designs using minimax and maximin
 
 @article{johnson1990minimax,
-  title={Minimax and maximin distance designs},
-  author={Johnson, Mark E and Moore, Leslie M and Ylvisaker, Donald},
-  journal={Journal of statistical planning and inference},
+  title={Minimax and Maximin Distance Designs},
+  author={Johnson, Mark E. and Moore, Leslie M. and Ylvisaker, Donald},
+  journal={Journal of Statistical Planning and Inference},
   volume={26},
   number={2},
   pages={131--148},
@@ -85,7 +85,7 @@
 %Rigurous GPs
 
 @book{lifshits2012lectures,
-  title={Lectures on Gaussian processes},
+  title={Lectures on Gaussian Processes},
   author={Lifshits, Mikhail},
   booktitle={Lectures on Gaussian Processes},
   pages={1--117},
@@ -106,7 +106,7 @@
 %Book on Gaussian random functions
 
 @book{lifshits2013gaussian,
-  title={Gaussian random functions},
+  title={Gaussian Random Functions},
   author={Lifshits, Mikhail Anatolevich},
   volume={322},
   year={2013},
@@ -117,7 +117,7 @@
 
 
 @article{dupuy2015dicedesign,
-  title="DiceDesign and DiceEval: Two R packages for design and analysis of computer experiments",
+  title="DiceDesign and DiceEval: Two R packages for Design and Analysis of Computer Experiments",
   author="Dupuy, Delphine and Helbert, C{\'e}line and Franco, Jessica and others",
   journal="Journal of Statistical Software",
   volume="65",
@@ -130,7 +130,7 @@
 %Reference on finite differences
 
 @book{thomas2013numerical,
-  title={Numerical partial differential equations: finite difference methods},
+  title={Numerical Partial Differential Equations: Finite Difference Methods},
   author={Thomas, James William},
   volume={22},
   year={2013},
@@ -140,7 +140,7 @@
 %Reference to dudley
 
 @book{dudley2002real,
-  title={Real analysis and probability},
+  title={Real Analysis and Probability},
   author={Dudley, Richard M},
   volume={74},
   year={2002},
@@ -150,7 +150,7 @@
 %Lebedev Book
 
 @book{lebedev2012functional,
-  title={Functional analysis: applications in mechanics and inverse problems},
+  title={Functional Analysis: Applications in Mechanics and Inverse Problems},
   author={Lebedev, Leonid P and Vorovich, Iosif I and Gladwell, Graham Maurice Leslie},
   volume={41},
   year={2012},
