Thesis final correction introduction

--- a/Thesis.bib
+++ b/Thesis.bib
@@ -214,7 +214,7 @@
 @book{casella2008monte,
   title={Monte Carlo Statistical Methods},
   author={Casella, George},
-  year={2008}
+  year={2008},
   publisher={Springer}
 }
 
