Chapter 3 corrections done

--- a/Tesis.tex
+++ b/Tesis.tex
@@ -253,19 +253,19 @@ perspective, this number is interpreted as: for every hundred planets, on averag
  In the Bayesian
 perspective the number 0.01 is interpreted as a measure of how certain we are about life in the universe
 given the current state of knowledge about the outer space. 
-Clearly there is a big philosophical
+Clearly there is a philosophical
 difference between these two approaches that has a direct impact in how far reaching is each point of view 
 in terms of theoretical foundations and applications  \cite{jaynes2003probability}.
 
 
 %Talking about Bayes rule
-At this point we mention that when we talk about uncertainty we are talking about every possible 
+At this point we mention that when we refer uncertainty we are talking about every possible 
 source of randomness  or  lack of information. That is, the use of the word uncertainty in this work
 is related to either \cite{kennedy2001bayesian}
 \begin{itemize}
 \item Epistemic: a phenomenon might not be random but the complete lack of 
 understanding of it makes us see it as random.
-\item Aleatory: Inherent to the nature of the phenomenon. For 
+\item Aleatory: Uncertainty inherent to the nature of the phenomenon. For 
 example, this is the kind of randomness physicists believe is happening in quantum mechanics.
 \end{itemize}
 In real life the uncertainty associated with a  measurement or  quantity 
@@ -274,6 +274,8 @@ The Bayesian framework provides a rigorous framework to study these uncertaintie
 using whatever information is available for the underlying problem. The cornerstone of this framework
 in the mathematical language is known as   Bayes' formula. Before we present it, let us 
 introduce some important definitions taken from \cite{dudley2002real}.
+
+\section{Definitions and Notation}
 
 \begin{definition}\label{dfnprobabilitytriple}
 A probability space is a triple $(\Omega,\mathscr{F},\p)$, where $\Omega$ is a set called 
